[package]
name = "fusion-ibc"
authors.workspace = true
edition.workspace = true
version.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true

[features]
component = [
    "cnidarium",
    "fusion-proto/cnidarium",
    "fusion-sct/component",
]
default = ["component", "std"]
std = ["ibc-types/std"]
docsrs = []
rpc = ["dep:tonic", "ibc-proto/client", "ibc-proto/server"]

[dependencies]
anyhow = {workspace = true}
ark-ff = {workspace = true, default-features = false}
async-trait = {workspace = true}
base64 = {workspace = true}
blake2b_simd = {workspace = true}
cnidarium = {workspace = true, optional = true, default-features = true}
futures = {workspace = true}
hex = {workspace = true}
ibc-proto = {workspace = true, default-features = false}
ibc-types = {workspace = true, default-features = false}
ics23 = {workspace = true}
metrics = {workspace = true}
num-traits = {workspace = true, default-features = false}
once_cell = {workspace = true}
pbjson-types = {workspace = true}
fusion-asset = {workspace = true, default-features = false}
fusion-num = {workspace = true, default-features = false}
fusion-proto = {workspace = true, default-features = false}
fusion-sct = {workspace = true, default-features = false}
fusion-txhash = {workspace = true, default-features = false}
prost = {workspace = true}
serde = {workspace = true, features = ["derive"]}
serde_json = {workspace = true}
sha2 = {workspace = true}
tendermint = {workspace = true}
tendermint-light-client-verifier = {workspace = true}
time = {workspace = true}
tonic = {workspace = true, optional = true}
tower = {workspace = true}
tracing = {workspace = true}

[dev-dependencies]
tokio = {workspace = true, features = ["full"]}
