[package]
name = "fusion-shielded-pool"
authors.workspace = true
edition.workspace = true
version.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true

[features]
component = [
    "cnidarium-component",
    "cnidarium",
    "fusion-proto/cnidarium",
    "fusion-ibc/component",
    "fusion-sct/component",
    "tonic",
    "ibc-proto/server",
    "ibc-proto/transport",
]
# proving-keys = ["fusion-proof-params/proving-keys"]
default = ["std", "component"]
std = ["ark-ff/std"]
parallel = [
    "fusion-tct/parallel",
    "ark-ff/parallel",
    "poseidon377/parallel",
    "decaf377-rdsa/parallel",
    "ark-groth16/parallel",
    "ark-r1cs-std/parallel",
    "decaf377/parallel",
    "tonic",
]
docsrs = []

[dependencies]
anyhow = {workspace = true}
ark-ff = {workspace = true, default-features = false}
ark-groth16 = {workspace = true, default-features = false}
ark-r1cs-std = {workspace = true, default-features = false}
ark-relations = {workspace = true}
ark-serialize = {workspace = true}
ark-snark = {workspace = true}
async-stream = {workspace = true}
async-trait = {workspace = true}
base64 = {workspace = true}
blake2b_simd = {workspace = true}
bytes = {workspace = true}
chacha20poly1305 = {workspace = true}
cnidarium = {workspace = true, optional = true, default-features = true}
cnidarium-component = {workspace = true, optional = true, default-features = true}
decaf377 = {workspace = true, features = ["r1cs"], default-features = true}
decaf377-fmd = {workspace = true}
decaf377-ka = {workspace = true}
decaf377-rdsa = {workspace = true}
futures = {workspace = true}
hex = {workspace = true}
ibc-proto = {workspace = true, default-features = false}
ibc-types = {workspace = true, features = ["with_serde"], default-features = false}
im = {workspace = true}
metrics = {workspace = true}
once_cell = {workspace = true}
fusion-asset = {workspace = true, default-features = false}
fusion-ibc = {workspace = true, default-features = false}
fusion-keys = {workspace = true, default-features = false}
fusion-num = {workspace = true, default-features = false}
fusion-proof-params = {workspace = true, default-features = false}
fusion-proto = {workspace = true, default-features = false}
fusion-sct = {workspace = true, default-features = false}
fusion-tct = {workspace = true, default-features = true}
fusion-txhash = {workspace = true, default-features = false}
poseidon377 = {workspace = true, features = ["r1cs"]}
prost = {workspace = true}
rand = {workspace = true}
rand_core = {workspace = true, features = ["getrandom"]}
regex = {workspace = true}
serde = {workspace = true, features = ["derive"]}
serde_json = {workspace = true}
tap = {workspace = true}
tendermint = {workspace = true}
thiserror = {workspace = true}
tonic = {workspace = true, optional = true}
tracing = {workspace = true}

[dev-dependencies]
proptest = {workspace = true}
